# pysectprop

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml
notes/: polygon.md  segment.md  tube.md
pysectprop/: __init__.py
pysectprop/extruded/: __init__.py  circlesection.py  isection.py  jsection.py  lsection.py  omegasection.py  rectanglesection.py  semitubesection.py  ssection.py  tsection.py  tubesection.py  zsection.py
pysectprop/formed/: __init__.py  csection.py  lsection.py  (+4 more)
scripts/: arc_script.py  circle_script.py  composite_calculations_script.py  composite_section_script.py  csection_formed_script.py  fillet_script.py  hollow_path_script.py  intersect_script.py  isection_script.py  jsection_script.py  lsection_formed_script.py  lsection_script.py  material_section_script.py  mould_script.py  multiple_fillet_script.py  omegasection_formed_script.py  omegasection_script.py  quarter_circle_script.py  rectangle_section_script.py  section_calculation_script.py  sector_script.py  square_section_script.py  test_arc.py  test_circle.py  test_composite_calculations.py  test_composite_section.py  test_csection_formed.py  test_fillet.py  test_intersect.py  test_isection.py  test_jsection.py  test_lsection.py  test_lsection_formed.py  test_material_section.py  test_multiple_fillet.py  test_omegasection.py  test_quarter_circle.py  test_rectanglesection.py  test_section_calculation.py  test_ssection.py  (+7 more)
tests/: test_circle.py  test_line.py  test_materialsection.py  test_rectangle.py  test_sector.py
(+40 files in other folders)
