[project]
name = "pysectprop"
version = "0.2.1"
authors = [
  { name="Xero64", email="xero64@gmail.com" },
]
description = "Python Package for Section Properties"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "matplotlib>=3.10.5",
    "py2md>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/Xero64/pysectprop"
Issues = "https://github.com/Xero64/pysectprop/issues"
